🐛fix(style) resolve scrolling effect that causes lag in ng-scrollbar

--- a/client/style/global.scss
+++ b/client/style/global.scss
@@ -25,7 +25,6 @@ body {
 
 * {
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
